replace uuid with nanoid